Fixed an issue where text was wrapped

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -5,7 +5,7 @@
 .console-full{width:100%;height:100%;margin:0;padding:0;overflow:hidden;}
 .about-console{background-color:#16191b;}
 .modal-size{width:50%;}
-.main-title{font-size:45px;z-index:1;position:absolute;display:block;top:50%;left:50%;transform:translateX(-50%) translateY(-50%);word-wrap:break-word;-webkit-hyphens:auto;-moz-hyphens:auto;-ms-hyphens:auto;-o-hyphens:auto;hyphens:auto;}
+.main-title{font-size:45px;z-index:1;position:absolute;display:block;top:50%;left:50%;transform:translateX(-50%) translateY(-50%);word-wrap:break-word;-webkit-hyphens:auto;-moz-hyphens:auto;-ms-hyphens:auto;-o-hyphens:auto;hyphens:auto;white-space: nowrap;}
 .code-section{text-align:left;}
 .api-link{font-size:30px;}
 #console{font-family:'Roboto Mono', monospace;color:#fff;width:100%;margin-left:auto;margin-right:auto;margin-top:100px;font-size:14px;background-color:#16191b;}
